tdf#119227 fix freeze when copying a large bulleted list

freeze goes from 5 seconds to about 1 second for me

(1) used unordered_map instead of map
(2) don't create temporary SfxItemSet's just to check equality

Change-Id: I17939adb9ffd53bc56339d7a62ef217ade26de36